@@ -1,5 +1,6 @@
 
 TODO:
 - fix drops
-- use player yaw to turn horse instead of a/d keys
 - add localization support
+- fix player position on horse
+- make turning gradual when using mouse control
