@@ -13,3 +13,6 @@ whinny.spawn_height_min (Spawn min height) int -500
 
 # Maximum height at which entity can spawn.
 whinny.spawn_height_max (Spawn max height) int 500
+
+# Use mouse to control direction instead of a/d keys.
+whinny.enable_mouse_ctrl (Turn with mouse) bool true
