@@ -6,3 +6,4 @@
 - added settings for min/max spawn height & spawn chance
 - changed setting "only_peaceful_whinny" to "whinny.peaceful_only"
 - player faces same direction as horse after mounting
+- added setting to use mouse/look direction to control left/right turning (enabled by default)
